# RealTimeMonitor

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  VARMONITOR_GUIA_FLUJO_Y_ARQUITECTURA.md  docker-compose.host.yml  docker-compose.yml  mkdocs.en.yml  mkdocs.yml  varmon.conf
.github/workflows/: deploy-astro.yml
astro/: DEPLOY.md  astro.config.mjs  package-lock.json  package.json
astro/public/docs/en/: architecture.html  backend.html  cpp-integration.html  docker.html  frontend.html  index.html  setup.html  troubleshooting.html
astro/public/docs/en/search/: search_index.json
astro/public/docs/es/: 404.html  index.html  miniplan_almacenamiento_estable_sub.html  performance.html  protocols.html
astro/public/docs/es/search/: search_index.json
astro/src/pages/: index.astro
client_lib/: CMakeLists.txt  monitor_client_wrapper.c  monitor_client_wrapper.h
data/: arinc_discrete_bits_sample.csv  arinc_import_mixed_sample.csv  arinc_import_sample.csv  arinc_sample_analog.csv  arinc_sample_dis.csv  varmon.conf
demo_app/: CMakeLists.txt  main.cpp
docs/: architecture.md  backend.md  build-binary.md  docker.md  frontend.md  index.md  performance.md  protocols.md  setup.md  troubleshooting.md
docs_en/: architecture.md  backend.md  build-binary.md  docker.md  frontend.md  index.md  performance.md  protocols.md  setup.md
libvarmonitor/: CMakeLists.txt
libvarmonitor/include/: shm_publisher.hpp  var_monitor.hpp  var_monitor_macros.hpp
libvarmonitor/rpc/: monitor.x
libvarmonitor/src/: rpc_bridge.cpp  rpc_server_impl.c  rpc_server_run.cpp  shm_publisher.cpp  tcp_server.cpp  uds_server.cpp  var_monitor.cpp
scripts/: LAUNCH.md  XTerm2026-04-19.12:29:08  XTerm2026-04-19.12:29:11  XTerm2026-04-19.12:34:26  XTerm2026-04-19.12:34:30  build_docs_for_astro.sh  build_docs_pdf.sh  build_m1553_registry_json.py  launch_corenexus.sh  launch_corenexus_both.sh  launch_demo.sh  launch_mavlink_emitter_serial.sh  launch_mavlink_serie.sh  launch_mavlink_udp.sh  launch_ui.sh  launch_web.sh  mavlink_test_emitter.py  run_desktop.py  run_desktop.sh  run_tests.sh  run_window.sh  setup.sh  simple_config.sh  stop_varmonitor.sh  test.txt  test2.txt
scripts/varmon/: build_corenexus.sh  build_docs_pdf.py  build_varmonitor_web.sh  build_web_static_js.sh  docker-run.sh  generate_webmonitor_version.sh  gui_plugins_deploy.py  launch_demo.py  launch_gui_plugins_deploy.sh  launch_ui.py  launch_web.py  patch_pywebview_qt.py  prepare_plugins_release_artifacts.sh  setup.sh  strip_plugin_chunks_sourcemaps.sh  varmon_browser.py  varmon_config.py  varmon_launch_util.py
site/: 404.html  architecture.html  backend.html  build-binary.html  cpp-integration.html  docker.html  frontend.html  index.html  launch.html  setup.html  troubleshooting.html
site/architecture/: index.html
site/backend/: index.html
site/build-binary/: index.html
site/cpp-integration/: index.html
site/docker/: index.html
site/frontend/: index.html
site/launch/: index.html
site/miniplan_almacenamiento_estable_sub/: index.html
site/performance/: index.html
site/protocols/: index.html
site/search/: search_index.json
site/setup/: index.html
site/troubleshooting/: index.html
site_en/: 404.html  build-binary.html  index.html  launch.html  performance.html  protocols.html
site_en/architecture/: index.html
site_en/backend/: index.html
site_en/build-binary/: index.html
site_en/cpp-integration/: index.html
site_en/docker/: index.html
site_en/frontend/: index.html
site_en/launch/: index.html
site_en/performance/: index.html
site_en/protocols/: index.html
site_en/search/: search_index.json
site_en/setup/: index.html
site_en/troubleshooting/: index.html
tests/cpp/: CMakeLists.txt  test_var_monitor.cpp
tests/js/: arinc_import_validation.test.mjs  arinc_mapping_profiles.test.mjs  arinc_registry_module.test.mjs  extracted_functions.mjs  functions.test.mjs  m1553_registry.test.mjs  package-lock.json  package.json  plugin_api.test.mjs  replay_alias.test.mjs  replay_ref_alarm_eval.test.mjs
tests/python/: conftest.py  test_app_alarms.py  test_app_recording.py  test_app_recordings_api.py  test_app_smoke_api.py  test_app_utils.py  test_build_docs_pdf.py  test_file_edit_search.py  test_perf_agg.py  test_plugin_registry.py  test_shm_reader.py  test_uds_client.py  test_varmon_browser.py  test_varmon_config.py  test_varmon_launch_util.py
varmon_sidecar/: CMakeLists.txt  main.cpp
web_monitor/: .dockerignore  Dockerfile  app.py  app_scan_stub.tmp  perf_agg.py  plugin_registry.py  requirements-build.txt  requirements-desktop.txt  requirements-docker.txt  requirements-plugins-release.txt  requirements.txt  shm_reader.py  tcp_client.py  uds_client.py  varmonitor-web.spec  varmonitor_plugins_stub.py
web_monitor/arinc_data/: arinc_registry.json  arinc_registry.sqlite  m1553_registry.sqlite
web_monitor/static/: app.js  index.html  style.css
web_monitor/static/js/: app-legacy.mjs  entry.mjs
web_monitor/static/js/modules/: arinc-registry.mjs  constants.mjs  early-network.mjs  i18n.mjs  plotly-bootstrap.mjs
web_monitor/varmon_web/: __init__.py  arinc_sqlite.py  git_ui_api.py  log_buffer.py  parquet_dispatch.py  parquet_gate.py  paths.py  recordings_parquet.py  sensitive_auth.py  settings.py  uds_discovery.py
